--- a/Lab3/Lab3/Lab3.csproj
+++ b/Lab3/Lab3/Lab3.csproj
@@ -43,14 +43,21 @@
   <ItemGroup>
     <Compile Include="Circle.cs" />
     <Compile Include="Figure.cs" />
+    <Compile Include="FigureMatrixCheckEmpty.cs" />
+    <Compile Include="IMatrixCheckEmpty.cs" />
     <Compile Include="IPrint.cs" />
+    <Compile Include="Matrix.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rectangle.cs" />
+    <Compile Include="SimpleList.cs" />
+    <Compile Include="SimpleListItem.cs" />
+    <Compile Include="SimpleStack.cs" />
     <Compile Include="Square.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
